[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/pause.gd" type="Script" id=1]
[ext_resource path="res://fonts/flat-theme.tres" type="Theme" id=2]
[ext_resource path="res://gfx/gui/hud/pause-gradient.png" type="Texture" id=3]
[ext_resource path="res://sounds/gui/select-off.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/gui/select-on.ogg" type="AudioStream" id=5]
[ext_resource path="res://gfx/gui/hud/gradient-2.png" type="Texture" id=7]

[node name="pause-menu" type="CanvasLayer"]

[node name="pause" type="Control" parent="."]
pause_mode = 2
visible = false
margin_left = 299.0
margin_top = 221.0
margin_right = 339.0
margin_bottom = 261.0
script = ExtResource( 1 )

[node name="off" type="AudioStreamPlayer" parent="pause"]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="on" type="AudioStreamPlayer" parent="pause"]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="Main" type="VBoxContainer" parent="pause"]
visible = false
margin_left = -258.0
margin_top = -156.0
margin_right = -141.0
margin_bottom = -32.0

[node name="Pause-gradient" type="Sprite" parent="pause/Main"]
position = Vector2( 175, 57 )
texture = ExtResource( 3 )

[node name="resume" type="Button" parent="pause/Main"]
margin_right = 117.0
margin_bottom = 28.0
theme = ExtResource( 2 )
text = "Resume"

[node name="retry" type="Button" parent="pause/Main"]
margin_top = 32.0
margin_right = 117.0
margin_bottom = 60.0
theme = ExtResource( 2 )
text = "Retry"

[node name="Options" type="Button" parent="pause/Main"]
margin_top = 64.0
margin_right = 117.0
margin_bottom = 92.0
theme = ExtResource( 2 )
text = "options"

[node name="exit" type="Button" parent="pause/Main"]
margin_top = 96.0
margin_right = 117.0
margin_bottom = 124.0
theme = ExtResource( 2 )
text = "Exit"

[node name="Optionspause" type="VBoxContainer" parent="pause"]
visible = false
anchor_right = 1.0
margin_left = -158.5
margin_top = -205.0
margin_right = -31.5
margin_bottom = -3.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_constants/separation = 1

[node name="Pause-gradient" type="Sprite" parent="pause/Optionspause"]
position = Vector2( 83.5, 106 )
scale = Vector2( 1.30455, 1 )
texture = ExtResource( 7 )

[node name="Mute" type="Button" parent="pause/Optionspause"]
margin_right = 167.0
margin_bottom = 28.0
text = "Sounds"

[node name="Mute_music" type="Button" parent="pause/Optionspause"]
margin_top = 29.0
margin_right = 167.0
margin_bottom = 57.0
text = "<Music"

[node name="Fps" type="Button" parent="pause/Optionspause"]
margin_top = 58.0
margin_right = 167.0
margin_bottom = 86.0
text = "Display FPS (   )"

[node name="fullscreen" type="Button" parent="pause/Optionspause"]
margin_top = 87.0
margin_right = 167.0
margin_bottom = 115.0
text = "Toggle fullscreen"

[node name="Controls" type="Button" parent="pause/Optionspause"]
margin_top = 116.0
margin_right = 167.0
margin_bottom = 144.0
text = "Control reminders"

[node name="timer" type="Button" parent="pause/Optionspause"]
margin_top = 145.0
margin_right = 167.0
margin_bottom = 173.0
text = "Show timer -off-"

[node name="Back" type="Button" parent="pause/Optionspause"]
margin_top = 174.0
margin_right = 167.0
margin_bottom = 202.0
text = "Back"

[connection signal="visibility_changed" from="pause/Main" to="pause" method="_on_Main_visibility_changed"]
[connection signal="pressed" from="pause/Main/resume" to="pause" method="_on_resume_pressed"]
[connection signal="visibility_changed" from="pause/Main/resume" to="pause/Optionspause/Mute" method="_on_resume_visibility_changed"]
[connection signal="pressed" from="pause/Main/retry" to="pause" method="_on_retry_pressed"]
[connection signal="pressed" from="pause/Main/Options" to="pause" method="_on_Options_pressed"]
[connection signal="visibility_changed" from="pause/Main/Options" to="pause/Main/Options" method="_on_resume_visibility_changed"]
[connection signal="pressed" from="pause/Main/exit" to="pause" method="_on_exit_pressed"]
[connection signal="pressed" from="pause/Optionspause/Mute" to="pause" method="_on_Mute_pressed"]
[connection signal="visibility_changed" from="pause/Optionspause/Mute" to="pause/Optionspause/Mute" method="_on_Mute_visibility_changed"]
[connection signal="pressed" from="pause/Optionspause/Mute_music" to="pause" method="_on_Mute_music_pressed"]
[connection signal="visibility_changed" from="pause/Optionspause/Mute_music" to="pause/Optionspause/Mute_music" method="_on_Mute_visibility_changed"]
[connection signal="pressed" from="pause/Optionspause/Fps" to="pause" method="_on_Fps_pressed"]
[connection signal="pressed" from="pause/Optionspause/fullscreen" to="pause" method="_on_fullscreen_pressed"]
[connection signal="pressed" from="pause/Optionspause/Controls" to="pause" method="_on_Controls_pressed"]
[connection signal="pressed" from="pause/Optionspause/timer" to="pause" method="_on_timer_pressed"]
[connection signal="pressed" from="pause/Optionspause/Back" to="pause" method="_on_Back_pressed"]
